--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,16 @@ dependencies:
   flutter_rating_bar:
   hooks_riverpod:
   flutter_svg:
+  riverpod_annotation:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+  build_runner:
+  riverpod_generator:
+  riverpod_lint:
+  custom_lint:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
